--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "pino": "^8.19.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "https://github.com/pedroslopez/whatsapp-web.js/archive/refs/heads/webpack-exodus.tar.gz"
+    "whatsapp-web.js": "file:./wwebjs.tar.gz"
   },
   "devDependencies": {
     "pm2": "^5.3.0"
