--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@whiskeysockets/baileys": "^7.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -30,8 +30,7 @@
     "pg": "^8.11.3",
     "pino": "^8.19.0",
     "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:purpule-fox/whatsapp-web.js#master"
+    "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "pm2": "^5.3.0"
